# petto

./: .gitignore  AGENTS.md  CHANGELOG.md  README.html  README.md  SECURITY_IMPLEMENTATION_PLAN.md  package.json  pnpm-lock.yaml  specifications.md
.github/: copilot-instructions.md
.github/docs/: Auth-Client-Side.md  Pet-Schemas.md
.github/workflows/: svelte-runes-check.yml
apps/frontend/: .eslintignore  README.md  eslint.config.js  package.json  tsconfig.json
apps/frontend/docs/: ui-specifications.md
apps/frontend/eslint-rules/: no-svelte-lifecycle.cjs
apps/frontend/messages/: en.json  es.json  jp.json
apps/frontend/project.inlang/: project_id
backend/: .env  .env.example  README.md  config.py  database.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  logging_config.py  main.py  models.py  print.html  print.py  print_demo.html  pyproject.toml  requirements.md  requirements.txt  test_pdf.py
backend/middleware/: rate_limit.py  security.py
backend/routers/: banners.py  flyers.py  pet_location.py  pets.py  qrcode.py  static.py  upload.py  users.py
backend/schemas/: location.py  pets.py  users.py
backend/services/: pdf_generator.py
backend/static/flyers_templates/: critical_flyer.html  lost_pet_flyer.html  lost_pet_flyer_.html  old_west.html
backend/static/templates/: index.html
backend/static/uploads/: .gitignore
backend/tests/: test_auth_tokens.py  test_pets_response.py
backend/utils/: auth.py
frontend/: package.json  pnpm-lock.yaml
frontend/messages/: en.json  es.json  jp.json
frontend/project.inlang/: settings.json
(+59 files in other folders)
