[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "bcrypt>=4.3.0",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.36.0",
]
